2004-02-19  MINAMI Hirokazu  <minami@mistfall.net>

	* kiklib/src/kik_pty_streams.c: stopped use of ioctl TICNOTTY
	on glibc2 for happy valgrinding.

2004-02-16  Seiichi SATO  <ssato@sh.rim.or.jp>

	* Don't use -no-undefined libtool option, expect that
	$allow_undefined_flag is "unsupported".

2004-02-13  Tomohiro KUBOTA  <kubota@debian.org>

	* configure: synchronized with configure.in (2004-01-31).

2004-02-12  MINAMI Hirokazu  <minami@mistfall.net>

	* **/Makefile.in:
	- use @X_LIBS@/@X_PRE_LIBS@/@X_EXTRA_LIBS@ when possible.
	- mlconfig does not needs IMAGELIB_CFLAGS to compile.

2004-02-11  Araki Ken  <arakiken@users.sf.net>

	* Region selection and backscrolling are disabled in
	  vertical mode.

	* Color was not reversed in selecting in ISCII mode. Fixed.

2004-02-11  Tomohiro KUBOTA  <kubota@debian.org>

	* xwindow/xfont.c, xwindow/xfont.h, xwindow/x_term_manager.c:
	  mlterm will print an error message if mlterm cannot start
	  because of lacking of fonts.

2004-02-09  MINAMI Hirokazu  <minami@mistfall.net>

	* xwindow/Makefile.in, scrollbar/sample/Makefile.in,
	contrib/scrollbar/extra/Makefile.in: replaced hard-coded
	path by @X_CFLAGS@/@X_LIBS@ for cross compile.

2004-02-05  MINAMI Hirokazu  <minami@mistfall.net>

	* x_descsp_font.c:
	- backgorund wasn't cleared in draw_image_string.
	- when xft is used for rendering, always compose dec special
	chars since we can see nothing otherwise. (XXX to be fixed)

2004-02-03  Araki Ken  <arakiken@users.sf.net>

	* x_screen.c: If screen->line_space is over zero, XClearArea()
	  and XDrawString() are used instead of XDrawImageString().

2004-02-03  MINAMI Hirokazu  <minami@mistfall.net>

	* xwindow/x_decsp_font.c:
	- In x_decsp_font_draw_string(), reset a clip mask when unknown
	char was passed so that dummy rectangle can be drown correctry.
	- In x_decsp_font_draw_image_string(), draw a rectangle for
	unknown char.
	(Thanks to Mike FABIAN for reporting)

2004-01-31  Seiichi SATO  <ssato@sh.rim.or.jp>
